WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270641
Fix nullptr crash in recreateRenderBuffers when IOSurface::create fails
https://bugs.webkit.org/show_bug.cgi?id=270641
Summary
Fix nullptr crash in recreateRenderBuffers when IOSurface::create fails
Alex Christensen
Reported
2024-03-07 10:53:26 PST
rdar://124213354
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2024-03-07 10:55:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25588
EWS
Comment 2
2024-03-07 13:27:11 PST
Committed
275805@main
(9d53b7214e24): <
https://commits.webkit.org/275805@main
> Reviewed commits have been landed. Closing PR #25588 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug