Fix nullptr crash in recreateRenderBuffers when IOSurface::create fails https://bugs.webkit.org/show_bug.cgi?id=270641 rdar://124213354

Reviewed by Mike Wyrzykowski.

* Source/WebCore/Modules/WebGPU/Implementation/WebGPUCompositorIntegrationImpl.cpp:
(WebCore::WebGPU::CompositorIntegrationImpl::recreateRenderBuffers):
* Source/WebCore/Modules/WebGPU/Implementation/WebGPUCompositorIntegrationImpl.h:

Canonical link: https://commits.webkit.org/275805@main